# ReanUI

./: .gitignore  API_GUIDE.md  CMakeLists.txt  LICENSE  README.md  demo.css  demo_client.lua  docker-compose.yml  export_render.lua  main_demo.lua  meta.xml  run_tests.lua  stylesheet.css  test.lua  test_components.lua  test_css.lua  test_flexbox.lua  test_layout.lua  test_uielement.lua
assets/shaders/: blur.fx  rounded_rect.fx
conductor/: hybrid-renderer-plan.md  phase-3-shaders-plan.md  professional-blueprint.md
docs/: ARCHITECTURE.md  ARCHITECTURE_ES.md  USAGE_ES.md
include/ReanUI/: Style.h
src/: ReanUI.lua  rean_ui.c  rean_ui.h
src/Core/: LayoutProcessor.cpp
src/Lua/: LuaBridge.cpp
src/adapters/: StyleAdapter.lua
src/bridge/: lua_bridge.c
src/components/: BaseComponent.lua  Button.lua  Checkbox.lua  Container.lua  Edit.lua  Input.lua  Label.lua  ProgressBar.lua  ScrollPane.lua  Scrollbox.lua  Text.lua
src/core/: AnimationManager.lua  CSSProcessor.lua  EventEmitter.lua  InteractionManager.lua  StateManager.lua  StyleManager.lua  UIElement.lua  memory.c  memory.h
src/css/: parser.c  parser.h
tests/: test_advanced_themes.lua  test_animation_engine.lua  test_animations.lua  test_button_full.lua  test_checkbox.lua  test_css_parser.lua  test_css_theme_integration.lua  test_event_propagation.lua  test_event_system.lua  test_global_themes.lua  test_input_keyboard.lua  test_input_validation.lua  test_interaction.lua  test_lexbor_parser.lua  test_progress.lua  test_renderer_mta_backend.lua  test_renderer_perf.lua  test_scrollbox.lua  test_utils.lua
(+25 files in other folders)
